# aoc-2021

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
src/aoc_util/: __init__.py  aoc_requests.py  file_creation.py  files.py  grid.py  helper.py  main.py  readme.py
src/helper/: aoc_requests.py
src/newday/: __main__.py  file_creation.py  file_template.py
