[project]
name = "jace-aoc-util"
description = "Helps with advent of code. Creating files, downloading inputs."
version = "0.0.1"
readme = "README.md"
author = "Jace Iverson"
dependencies = [
    requests,
    bs4,
    pandas,
    rich,
    python-dotenv,
    tabulate
]

[project.scripts]
newday="aoc_util.file_creation:newday"
update-readme="aoc_util.readme:update_readme"
